--- a/index.html
+++ b/index.html
@@ -7,7 +7,44 @@
 </head>
 <body>
   <div class="container">
-    
-
-  
+    <header>
+      <h1>Artur Koryszewski</h1>
+      <p>Grafik specjalizujący się w reklamie i strategii marki, osadzony w Białymstoku.</p>
+    </header>
+          <div class=portfolio">
+    <div class="item">
+      <img src="portfolio-pol-krusz.jpg" alt="Seria postów Pol-krusz Concrete">
+      <div class="caption">
+        <p>Pol-krusz Concrete - Seria postów</p>
+      </div>
+          <div class="item">
+      <img src="portfolio-czarter.jpg" alt="Identyfikacja wizalna czarteru jachtów">
+      <div class="caption">
+        <p>Flota rodziny wojno - identyfikacja wizualna czarteru jachtów</p>
+      </div>
+                <div class="item">
+      <img src="portfolio-la.jpg" alt="Plakaty i posty reklamowe">
+      <div class="caption">
+        <p>London Academy - plakaty i posty reklamowe</p>
+      </div>
+                      <div class="item">
+      <img src="portfolio-pol-krusz.jpg" alt="Seria świątecznych postów">
+      <div class="caption">
+        <h2>seria świątecznych postów</h2>
+        <p>Pol-krusz Concrete</p>
+      </div>
+                            <div class="item">
+      <img src="portfolio-czarter.jpg" alt="Identyfikacja wizualna czarteru jachtów">
+      <div class="caption">
+        <h2>Identyfikacja wizualna czarteru jachtów</h2>
+        <p> Flota rodziny wojno</p>
+      </div>
+                                  <div class="item">
+      <img src="portfolio-la.jpg" alt="Plakaty i posty reklamowe">
+      <div class="caption">
+        <h2>Plakaty i posty reklamowe</h2>
+        <p>London Academy</p>
+      </div>
+  </div>
 </body>
+</html>
